--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>ajrothwell.github.io</h1>
+<p>The GitHub Pages for me generally</p>
 </body>
 </html>
